# paintnode

./: .gitignore  AGENTS.md  AGENTS.md.example  CLAUDE.md  CLAUDE.md.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  TRADEMARKS.md  design-qa.md  design.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  provider-runtimes.yml  release.yml
docs/: grok-future-expansion.md  release.md
docs/release-notes/: 0.1.1.md  0.1.2.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.6.md  0.2.0.md  0.2.1.md  0.2.2.md  0.2.3.md  0.2.4.md  0.2.5.md  0.2.6.md
docs/testing/: creative-blueprint-creator-study.md  creative-blueprint-virtual-creator-evaluation.md  native-qa.md
docs/workflow-board/: README.md  architecture.md  campaign-composer-user-flow.md  research-2026-07.md  roadmap.md  vision.md
public/: splash.html
scripts/: build-macos-signed.sh  build-managed-runtime.mjs  build-quicklook.mjs  claude-agent-runner.mjs  codex-capabilities.mjs  codex-sdk-runner.mjs  creator-study-contract.mjs  creator-study-package.test.mjs  creator-study-qa-consume.mjs  creator-study-setup.mjs  creator-study-setup.test.mjs  creator-study-synthesis.mjs  creator-study-synthesis.test.mjs  director-action-schema.mjs  generate-creator-study-materials.mjs  generate-runtime-manifest.mjs  managed-runtime-package-contract.mjs  native-provider-e2e.mjs  native-qa-app.mjs  native-qa-build-provenance.mjs  native-qa-build-provenance.test.mjs  native-qa-code-identity.mjs  native-qa-code-identity.test.mjs  native-qa-session-anchor.mjs  native-qa-session-anchor.test.mjs  native-qa-session-finalize.mjs  native-qa-session.mjs  native-qa-session.test.mjs  native-qa-static-app.mjs  native-qa-study-launch.mjs  native-qa-study-launch.test.mjs  provider-executable-trust.mjs  provider-executable-trust.test.mjs  provider-qa-preflight.mjs  provider-qa-preflight.test.mjs  provider-runtime-channel.mjs  provider-runtime-channel.test.mjs  tauri-dev.mjs  virtual-creator-session.mjs  virtual-creator-session.test.mjs  (+1 more)
src/: App.svelte  app.css  main.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/quicklook/: Extension.entitlements  PaintNodeORAPreview-Info.plist  PaintNodeORAThumbnail-Info.plist
src-tauri/macos/quicklook/Sources/: AppExtensionMain.swift  ORAArchive.swift  PreviewViewController.swift  ThumbnailProvider.swift
src-tauri/src/: app.rs  lib.rs  main.rs  managed_runtime.rs  menu.rs  png.rs  project.rs  provider_executable.rs  test_util.rs
src-tauri/src/ai/: antigravity.rs  canvas.rs  claude.rs  codex.rs  director.rs  fill_storyboard.rs  grok.rs  mod.rs  placement.rs  workflow_director.rs
src/lib/: io.test.ts  io.ts
src/lib/actions/: tooltip.ts
(+339 files in other folders)
