[package]
name = "paintnode"
version = "0.1.3"
description = "Use Codex CLI and Antigravity to generate and edit image layers with your existing CLI login."
authors = ["White Cornerstone Pty Ltd"]
license = "GPL-3.0-or-later"
publish = false
repository = "https://github.com/white-cornerstone/paintnode"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "paintnode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "PaintNode"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-dialog = "2.7.1"
arboard = "3.6"
sysinfo = "0.30"
trash = "=5.2.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSData"] }
