[package]
name = "paintnode"
version = "0.2.4"
description = "Use managed Codex and Claude runtimes plus Antigravity to plan, generate, and edit image layers."
authors = ["White Cornerstone Pty Ltd"]
license = "GPL-3.0-or-later"
publish = false
repository = "https://github.com/white-cornerstone/paintnode"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "paintnode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "PaintNode"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
base64 = "0.22"
cap-std = "=3.4.5"
cap-fs-ext = "=3.4.5"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
semver = "1"
tauri-plugin-dialog = "2.7.1"
arboard = "3.6"
sysinfo = "0.30"
trash = "=5.2.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
